# data-structures-and-algorithms

./: README.md  package-lock.json  pyproject.toml
python/: README.md  pyproject.toml
python/Data-Structures/graph/: README.md  pyproject.toml
python/Data-Structures/hashtable/: README.md  pyproject.toml
python/Data-Structures/linked_list/: README.md  linked_list.py
python/Data-Structures/ll_zip/: ll_zip.py
python/Data-Structures/stacks_and_queues/: README.md  pyproject.toml
python/Data-Structures/stacks_and_queues/stacks_and_queues/: stacks_and_queues.py
python/Data-Structures/stacks_and_queues/tests/: test_queue.py
python/Data-Structures/tree/: README.md  pyproject.toml
python/challenges/BinaryTree/: README.md  pyproject.toml
python/challenges/array_binary_search/: README.md  array_binary_search.py  pyproject.toml
python/challenges/array_reverse/: README.md  array_reverse.py
python/challenges/array_shift/: README.md  array_shift.py
python/challenges/binary_tree/: pyproject.toml
python/challenges/fifo_animal_shelter/: README.md  pyproject.toml
python/challenges/fizz_buzz_tree/: README.md  pyproject.toml
python/challenges/left-join/: README.md  pyproject.toml
python/challenges/multi_bracket_validation/: README.md  pyproject.toml
python/challenges/queue_with_stacks/: README.md  pyproject.toml
python/challenges/repeated-word/: README.md  pyproject.toml
python/challenges/tree_intersection/: README.md  pyproject.toml
python/linked_list/: linked_list.py  pyproject.toml
python/tests/: test_array_shift.py
(+36 files in other folders)
