[tool.poetry]
name = "stacks_and_queues"
version = "0.1.0"
description = ""
authors = ["NickDorkins <nick.dorkins@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
